--- a/FindShelter.Web/FindShelter.Web.csproj
+++ b/FindShelter.Web/FindShelter.Web.csproj
@@ -127,7 +127,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Controllers\FacilitiesController.cs" />
   </ItemGroup>
   <ItemGroup />
   <PropertyGroup>
