--- a/FindShelter.Web/packages.config
+++ b/FindShelter.Web/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AngularJS.Core" version="1.3.2" targetFramework="net45" />
+  <package id="AngularJS.Route" version="1.3.2" targetFramework="net45" />
+  <package id="JasmineTest" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights" version="0.11.1-build00694" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.RuntimeTelemetry" version="0.11.1-build00694" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.Web" version="0.11.1-build00694" targetFramework="net452" />
