Implement Simple Facilities Controller

--- a/FindShelter.Web/packages.config
+++ b/FindShelter.Web/packages.config
@@ -6,9 +6,11 @@
   <package id="Microsoft.ApplicationInsights" version="0.11.1-build00694" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.RuntimeTelemetry" version="0.11.1-build00694" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.Web" version="0.11.1-build00694" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.2" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.1.8" targetFramework="net452" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net452" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net452" />
@@ -19,4 +21,5 @@
   <package id="Microsoft.Owin.StaticFiles" version="3.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="System.Spatial" version="5.6.3" targetFramework="net45" />
 </packages>
