--- a/FindShelter.Web.Test/packages.config
+++ b/FindShelter.Web.Test/packages.config
@@ -3,6 +3,9 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.2" targetFramework="net45" />
+  <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
   <package id="Microsoft.Owin" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Diagnostics" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Hosting" version="3.0.0" targetFramework="net45" />
