--- a/FindShelter.UdINaturenService/FindShelter.UdINaturenService.csproj
+++ b/FindShelter.UdINaturenService/FindShelter.UdINaturenService.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{974BC2B3-5CDC-461D-94E7-A2B9D30F46B4}</ProjectGuid>
+    <ProjectGuid>{7A19E47F-608A-4DAC-9A72-4498C928F0D6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FindShelter.Model</RootNamespace>
-    <AssemblyName>FindShelter.Model</AssemblyName>
+    <RootNamespace>FindShelter.UdINaturenService</RootNamespace>
+    <AssemblyName>FindShelter.UdINaturenService</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,8 +30,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.6.0.7\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,10 +47,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Facility.cs" />
-    <Compile Include="GeoCoordinate.cs" />
-    <Compile Include="IFacilityService.cs" />
-    <Compile Include="UTMCoordinate.cs" />
+    <Compile Include="FacilityService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchResult.cs" />
+    <Compile Include="SearchResultItem.cs" />
+    <Compile Include="SearchResultItemListContainer.cs" />
+    <Compile Include="ServiceClient.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FindShelter.Model\FindShelter.Model.csproj">
+      <Project>{974bc2b3-5cdc-461d-94e7-a2b9d30f46b4}</Project>
+      <Name>FindShelter.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
