--- a/FindShelter.GeoConverter/FindShelter.GeoConverter.csproj
+++ b/FindShelter.GeoConverter/FindShelter.GeoConverter.csproj
@@ -35,6 +35,10 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Spatial, Version=5.6.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\System.Spatial.5.6.3\lib\net40\System.Spatial.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,15 +48,16 @@
   <ItemGroup>
     <Compile Include="Converter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UTMCoordinate.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FindShelter.Model\FindShelter.Model.csproj">
       <Project>{974bc2b3-5cdc-461d-94e7-a2b9d30f46b4}</Project>
       <Name>FindShelter.Model</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
